// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: seeded demo day > auto-plan decisions are unchanged (default workshop) 1`] = `
{
  "deferrals": [
    "ORD0093370 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT065 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093372 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT066 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093374 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT067 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093376 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT068 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093379 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT073 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093381 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT074 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093383 | no_reefer_capacity | chosen | All 8 free Peliyagoda refrigerated vehicles that can serve OUT075 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093424 | no_reefer_capacity | chosen | All 6 free Kandy refrigerated vehicles that can serve OUT113 are full with higher-priority orders (skipped last run, then days since last served).",
  ],
  "stats": {
    "deferred": 8,
    "orders": 143,
    "reeferTrips": 15,
    "served": 135,
    "trips": 39,
    "vehiclesUsed": 38,
  },
  "trips": [
    "VEH001#1@03:30: ORD0093325,ORD0093324,ORD0093323,ORD0093322,ORD0093327,ORD0093326",
    "VEH002#1@03:30: ORD0093315,ORD0093319,ORD0093309,ORD0093317,ORD0093311,ORD0093321,ORD0093307,ORD0093313",
    "VEH003#1@03:30: ORD0093346,ORD0093345,ORD0093351,ORD0093342,ORD0093341,ORD0093348,ORD0093347",
    "VEH005#1@03:30: ORD0093356,ORD0093355,ORD0093359,ORD0093358,ORD0093354,ORD0093353",
    "VEH006#1@03:30: ORD0093366,ORD0093362,ORD0093361,ORD0093364,ORD0093368",
    "VEH007#1@03:30: ORD0093330,ORD0093329,ORD0093333,ORD0093332,ORD0093336,ORD0093335",
    "VEH008#1@08:40: ORD0093425,ORD0093426",
    "VEH009#1@03:30: ORD0093377",
    "VEH012#1@03:30: ORD0093331,ORD0093340,ORD0093338,ORD0093337,ORD0093328,ORD0093334,ORD0093339",
    "VEH013#1@03:30: ORD0093378,ORD0093382,ORD0093380",
    "VEH015#1@10:10: ORD0093427",
    "VEH016#1@08:40: ORD0093430,ORD0093431",
    "VEH018#1@08:25: ORD0093432",
    "VEH021#1@03:30: ORD0093343,ORD0093350,ORD0093344,ORD0093349",
    "VEH022#1@03:30: ORD0093360,ORD0093357,ORD0093352",
    "VEH027#1@07:20: ORD0093433",
    "VEH028#1@03:30: ORD0093365,ORD0093363,ORD0093367",
    "VEH032#1@03:30: ORD0093373,ORD0093371,ORD0093375,ORD0093369",
    "VEH034#1@03:30: ORD0093314,ORD0093318,ORD0093308,ORD0093316,ORD0093310,ORD0093320,ORD0093306,ORD0093312",
    "VEH035#1@03:30: ORD0093301,ORD0093303",
    "VEH036#1@03:30: ORD0093305,ORD0093304",
    "VEH037#1@03:30: ORD0093300,ORD0093302",
    "VEH039#1@03:30: ORD0093414,ORD0093413,ORD0093412,ORD0093411",
    "VEH040#1@03:30: ORD0093398,ORD0093397,ORD0093400,ORD0093399,ORD0093402,ORD0093401",
    "VEH041#1@03:30: ORD0093173,ORD0093174,ORD0093171,ORD0093176,ORD0093175,ORD0093177",
    "VEH042#1@03:30: ORD0093419,ORD0093421",
    "VEH043#1@03:30: ORD0093406,ORD0093405,ORD0093409,ORD0093408",
    "VEH044#1@03:30: ORD0093172",
    "VEH045#1@03:30: ORD0093396",
    "VEH046#1@10:15: ORD0093428,ORD0093429",
    "VEH048#1@03:30: ORD0093407,ORD0093410,ORD0093404,ORD0093403",
    "VEH049#1@03:30: ORD0093417,ORD0093416,ORD0093415",
    "VEH052#1@03:30: ORD0093418,ORD0093420",
    "VEH055#1@03:30: ORD0093422,ORD0093423",
    "VEH056#1@08:45: ORD0093434,ORD0093435",
    "VEH057#1@03:30: ORD0093386,ORD0093389",
    "VEH057#2@06:15: ORD0093392,ORD0093391,ORD0093394",
    "VEH059#1@03:30: ORD0093385,ORD0093395,ORD0093384,ORD0093387",
    "VEH060#1@03:30: ORD0093388,ORD0093393,ORD0093390",
  ],
}
`;

exports[`golden: seeded demo day > auto-plan decisions are unchanged (no vehicles in workshop) 1`] = `
{
  "deferrals": [
    "ORD0093379 | no_reefer_capacity | chosen | All 9 free Peliyagoda refrigerated vehicles that can serve OUT073 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093381 | no_reefer_capacity | chosen | All 9 free Peliyagoda refrigerated vehicles that can serve OUT074 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093383 | no_reefer_capacity | chosen | All 9 free Peliyagoda refrigerated vehicles that can serve OUT075 are full with higher-priority orders (skipped last run, then days since last served).",
    "ORD0093424 | no_reefer_capacity | chosen | All 7 free Kandy refrigerated vehicles that can serve OUT113 are full with higher-priority orders (skipped last run, then days since last served).",
  ],
  "stats": {
    "deferred": 4,
    "orders": 143,
    "reeferTrips": 16,
    "served": 139,
    "trips": 40,
    "vehiclesUsed": 40,
  },
  "trips": [
    "VEH001#1@03:30: ORD0093325,ORD0093324,ORD0093323,ORD0093322,ORD0093327,ORD0093326",
    "VEH002#1@03:30: ORD0093315,ORD0093319,ORD0093309,ORD0093317,ORD0093311,ORD0093321,ORD0093307,ORD0093313",
    "VEH003#1@03:30: ORD0093346,ORD0093345,ORD0093351,ORD0093342,ORD0093341,ORD0093348,ORD0093347",
    "VEH004#1@03:30: ORD0093356,ORD0093355,ORD0093359,ORD0093358,ORD0093354,ORD0093353",
    "VEH005#1@03:30: ORD0093366,ORD0093362,ORD0093361,ORD0093364,ORD0093368",
    "VEH006#1@03:30: ORD0093374,ORD0093372,ORD0093376,ORD0093370",
    "VEH007#1@03:30: ORD0093330,ORD0093329,ORD0093333,ORD0093332,ORD0093336,ORD0093335",
    "VEH008#1@08:40: ORD0093425,ORD0093426",
    "VEH012#1@03:30: ORD0093360,ORD0093357,ORD0093352",
    "VEH015#1@10:10: ORD0093427",
    "VEH016#1@08:40: ORD0093430,ORD0093431",
    "VEH017#1@08:25: ORD0093432",
    "VEH018#1@07:20: ORD0093433",
    "VEH021#1@03:30: ORD0093365,ORD0093363,ORD0093367",
    "VEH022#1@03:30: ORD0093373,ORD0093371,ORD0093375,ORD0093369",
    "VEH025#1@03:30: ORD0093314,ORD0093318,ORD0093308,ORD0093316,ORD0093310,ORD0093320,ORD0093306,ORD0093312",
    "VEH027#1@03:30: ORD0093331,ORD0093340,ORD0093338,ORD0093337,ORD0093328,ORD0093334,ORD0093339",
    "VEH028#1@03:30: ORD0093377",
    "VEH032#1@03:30: ORD0093378,ORD0093382,ORD0093380",
    "VEH034#1@03:30: ORD0093343,ORD0093350,ORD0093344,ORD0093349",
    "VEH035#1@03:30: ORD0093301,ORD0093303",
    "VEH036#1@03:30: ORD0093305,ORD0093304",
    "VEH037#1@03:30: ORD0093300,ORD0093302",
    "VEH039#1@03:30: ORD0093414,ORD0093413,ORD0093412,ORD0093411",
    "VEH040#1@03:30: ORD0093398,ORD0093397,ORD0093400,ORD0093399,ORD0093402,ORD0093401",
    "VEH041#1@03:30: ORD0093173,ORD0093174,ORD0093171,ORD0093176,ORD0093175,ORD0093177",
    "VEH042#1@03:30: ORD0093419,ORD0093421",
    "VEH043#1@03:30: ORD0093406,ORD0093405,ORD0093409,ORD0093408",
    "VEH044#1@03:30: ORD0093172",
    "VEH045#1@03:30: ORD0093396",
    "VEH046#1@10:15: ORD0093428,ORD0093429",
    "VEH048#1@03:30: ORD0093407,ORD0093410,ORD0093404,ORD0093403",
    "VEH049#1@03:30: ORD0093417,ORD0093416,ORD0093415",
    "VEH052#1@03:30: ORD0093418,ORD0093420",
    "VEH055#1@03:30: ORD0093422,ORD0093423",
    "VEH056#1@08:45: ORD0093434,ORD0093435",
    "VEH057#1@03:30: ORD0093386,ORD0093389",
    "VEH058#1@03:30: ORD0093392,ORD0093391,ORD0093394",
    "VEH059#1@03:30: ORD0093385,ORD0093395,ORD0093384,ORD0093387",
    "VEH060#1@03:30: ORD0093388,ORD0093393,ORD0093390",
  ],
}
`;

exports[`golden: seeded demo day > reports issues for a broken plan in a stable order 1`] = `
[
  "error duplicate_order VEH001#1 ORD0093300 | ORD0093300 is planned twice",
  "error unknown_order VEH001#1 ORD_UNKNOWN | Unknown order ORD_UNKNOWN",
  "error over_volume VEH001#1 - | Over volume: 90.5 / 26.4 m³",
  "error over_weight VEH001#1 - | Over weight: 14,210 / 5,510 kg",
  "error mixed_district VEH001#1 - | Mixed districts: Colombo + Gampaha",
  "error van_only VEH001#1 ORD0093300 | OUT001 is van-only",
  "error van_only VEH001#1 ORD0093301 | OUT001 is van-only",
  "error van_only VEH001#1 ORD0093302 | OUT002 is van-only",
  "error van_only VEH001#1 ORD0093303 | OUT002 is van-only",
  "error van_only VEH001#1 ORD0093304 | OUT003 is van-only",
  "error van_only VEH001#1 ORD0093305 | OUT003 is van-only",
  "error van_only VEH001#1 ORD0093300 | OUT001 is van-only",
  "error window_breach VEH001#1 - | Arrives 08:00 after OUT003 closes at 07:30",
  "error window_breach VEH001#1 - | Arrives 08:40 after OUT004 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 09:20 after OUT005 closes at 07:45",
  "error window_breach VEH001#1 - | Arrives 09:58 after OUT006 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 10:38 after OUT007 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 11:18 after OUT008 closes at 07:30",
  "error window_breach VEH001#1 - | Arrives 11:56 after OUT009 closes at 07:45",
  "error window_breach VEH001#1 - | Arrives 12:34 after OUT010 closes at 07:30",
  "error window_breach VEH001#1 - | Arrives 13:12 after OUT011 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 13:50 after OUT012 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 14:28 after OUT013 closes at 07:30",
  "error window_breach VEH001#1 - | Arrives 15:06 after OUT014 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 15:46 after OUT025 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 16:09 after OUT026 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 16:47 after OUT027 closes at 07:30",
  "error window_breach VEH001#1 - | Arrives 17:11 after OUT028 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 17:51 after OUT029 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 18:14 after OUT030 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 18:52 after OUT031 closes at 08:00",
  "error window_breach VEH001#1 - | Arrives 19:15 after OUT032 closes at 07:45",
  "error window_breach VEH001#1 - | Arrives 19:38 after OUT033 closes at 08:00",
  "error over_volume VEH001#2 - | Over volume: 43.3 / 26.4 m³",
  "error over_weight VEH001#2 - | Over weight: 6,613 / 5,510 kg",
  "error mixed_district VEH001#2 - | Mixed districts: Gampaha + Kalutara + Galle",
  "error window_breach VEH001#2 - | Arrives 07:42 after OUT041 closes at 07:30",
  "error window_breach VEH001#2 - | Arrives 08:06 after OUT042 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 08:30 after OUT043 closes at 07:30",
  "error window_breach VEH001#2 - | Arrives 09:11 after OUT044 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 09:50 after OUT045 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 10:14 after OUT046 closes at 07:30",
  "error window_breach VEH001#2 - | Arrives 10:53 after OUT050 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 11:17 after OUT051 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 11:58 after OUT052 closes at 07:30",
  "error window_breach VEH001#2 - | Arrives 12:39 after OUT053 closes at 08:00",
  "error window_breach VEH001#2 - | Arrives 13:04 after OUT054 closes at 07:30",
  "error mixed_district VEH001#3 - | Mixed districts: Galle + Matara + Kurunegala",
  "error window_breach VEH001#3 - | Arrives 08:43 after OUT055 closes at 07:30",
  "error window_breach VEH001#3 - | Arrives 09:08 after OUT059 closes at 07:45",
  "error window_breach VEH001#3 - | Arrives 09:47 after OUT060 closes at 08:00",
  "error window_breach VEH001#3 - | Arrives 10:26 after OUT061 closes at 07:30",
  "error window_breach VEH001#3 - | Arrives 11:05 after OUT062 closes at 08:00",
  "error window_breach VEH001#3 - | Arrives 11:44 after OUT065 closes at 08:00",
  "error too_many_trips VEH001#2 - | VEH001 Trip 2 departs before Trip 1 returns",
  "error too_many_trips VEH001#3 - | VEH001 Trip 3 departs before Trip 2 returns",
  "error too_many_trips VEH001#- - | VEH001: 3 trips planned",
  "error fresh_budget VEH001#- - | Fresh time over budget: 1829 / 270 min",
]
`;

exports[`golden: seeded demo day > the generated plan validates with no issues (default workshop) 1`] = `[]`;

exports[`golden: seeded demo day > the generated plan validates with no issues (no vehicles in workshop) 1`] = `[]`;
